syntax = "proto2";

// This is a proto representation of the NYC TLC Taxi data.
// See http://www.nyc.gov/html/tlc/html/about/trip_record_data.shtml
// Yellow: http://www.nyc.gov/html/tlc/downloads/pdf/data_dictionary_trip_records_yellow.pdf
// Green:  http://www.nyc.gov/html/tlc/downloads/pdf/data_dictionary_trip_records_green.pdf

package com.sidewalklabs;

enum MyEnum {
  UNKNOWN = 0;
  A = 1;
  B = 2;
}

message SimpleMessage {
  optional string name = 1;
  optional float value = 2;
}

message MessageWithEnum {
  optional string name = 1;
  optional MyEnum typ = 2;
}

